# xvim

./: .clinerules  .gitignore  Cargo.toml  LICENSE  README.md  build_and_check.sh  fix_duplicate_imports.sh  fix_missing_imports.sh  fix_unused_variables.sh  fix_unused_vars.sh  fix_warnings.sh  generate_tests.sh  integrate_vim_runtime.sh  run_integration_tests.sh  run_tests.sh  run_vimscript_test.sh  test_info.sh  vim_integration.md  woop.txt
docs/: architecture.md  plugin_system.md
examples/: sample.ts  sample.tsx  vimscript_test.rs
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/plugins/: noxvim.md  pyrovim.md
memory-bank/vim-implementation-reference/: README.md  buffer-management.md
plugins/: noxvim.dep.json  noxvim.md
runtime/: indent.vim  test.vim  vimrc.vim
runtime/colors/: monokai.vim  solarized.vim
src/: lib.rs  main.rs
src/buffer/: change.rs  manager.rs  mod.rs  syntax.rs
src/command/: additional_handlers.rs  autocmd_handlers.rs  completion_handlers.rs  config_handlers.rs  diff_handlers.rs  ex.rs  fold_handlers.rs  handlers.rs  macro_handlers.rs  mark_handlers.rs  mod.rs  nohlsearch_handlers.rs  quickfix_handlers.rs  search_handlers.rs  session_handlers.rs  set_handler.rs  set_handlers.rs  spell_handlers.rs  tag_handlers.rs  terminal_handlers.rs  undo_handlers.rs  vim_commands.rs  window_handlers.rs
src/config/: mod.rs
src/cursor/: mod.rs
src/editor/: init.rs  mod.rs
src/insert/: mod.rs
src/keymap/: mod.rs  normal_commands.rs
src/macro/: mod.rs
src/mark/: mod.rs
src/mode/: mod.rs  normal_commands.rs
src/operator/: mod.rs
src/plugin/: ai.rs  api.rs  async.rs  commands.rs  debug.rs  dependency.rs  events.rs  mod.rs  network.rs  ui.rs  wasm.rs
src/plugin/examples/: README.md  normal_mode_plugin.rs  plugin.rs
src/plugin/r#async/: mod.rs
src/r#macro/: mod.rs
src/register/: mod.rs
src/search/: mod.rs
src/selection/: mod.rs
src/syntax/: colorscheme.rs  mod.rs  typescript.rs
src/text_object/: mod.rs
src/ui/: mod.rs  status_line.rs  syntax_renderer.rs  tab.rs  tab_methods.rs  window.rs  window_methods.rs
src/vimscript/: mod.rs
src/visual/: mod.rs
tests/: buffer_tests.rs  colorscheme_test.rs  command_test.rs  ex_commands_test.rs  insert_test.rs  macro_test.rs  mark_test.rs  normal_test.rs  operator_test.rs  register_test.rs  search_test.rs  simple_test.rs  syntax_test.rs  text_object_test.rs  typescript_syntax_test.rs  vimscript_test.rs  visual_test.rs
wasm/async_plugin/: Cargo.toml  README.md
wasm/async_plugin/src/: lib.rs
wasm/debug_example/: README.md  debug_config.json
wasm/dependency_example/: README.md  base_plugin.dep.json  complex_plugin.dep.json  dependent_plugin.dep.json
wasm/hello_plugin/: Cargo.toml  README.md
wasm/hello_plugin/src/: lib.rs
wasm/noxvim/: Cargo.toml  README.md
wasm/noxvim/src/: ai_service.rs  command_executor.rs  config.rs  context_provider.rs  lib.rs  ui_manager.rs  utils.rs
wasm/xvim_plugin_api/: Cargo.toml
wasm/xvim_plugin_api/src/: lib.rs
